# Panthers-Stats-Dashboard

./: LLM.py  README.md  app.py  app_modal.py  h origin main --force  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu  activate.ps1  activate_this.py
