[project]
name = "code-assignment-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "datetime>=5.5",
    "modal>=1.1.4",
    "openai>=1.108.1",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "supabase>=2.20.0",
]
